--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
-    padding: 30px;
+    padding: 20px;
 }
 
 
@@ -248,6 +248,7 @@ header {
 footer {
     text-align: center;
     padding: 30px;
+    padding-bottom: 100px;
     color: #555;
     font-size: 0.85rem;
 }
@@ -263,9 +264,9 @@ footer a:hover {
 }
 
 /* Mobile adjustments */
-@media (max-width: 500px) {
+@media (max-width: 400px) {
     .container {
-        padding: 20px;
+        padding: 15px;
     }
 
     .logo {
@@ -274,10 +275,9 @@ footer a:hover {
 
     footer {
         padding: 20px;
+        padding-bottom: 100px;
     }
-}
 
-@media (max-width: 400px) {
     .ratio-btn {
         font-size: 0.7rem;
         padding: 7px 2px;
